bank.controller.ts added and integrated, getClientToken added in client_access
